--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
+# Dependencies
+node_modules/
+/.pnp
+.pnp.js
+package-lock.json
+yarn.lock
 
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE/Editor specific
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Backend specific
+/Backend/uploads/*
+!/Backend/uploads/.gitkeep
+/Backend/logs/*
+!/Backend/logs/.gitkeep
+
+# Frontend specific
+/Frontend/.next/
+/Frontend/out/
+/Frontend/.cache/
+/Frontend/build/
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Misc
+.cache/
+.temp/
+*.log
+.vercel
+.netlify
