--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,1 +1,42 @@
+{
+  "name": "devsrus-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "axios": "^1.3.4",
+    "next": "^13.0.0",
+    "next-auth": "^4.22.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "socket.io-client": "^4.6.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "prettier": "^2.8.7"
+  }
+}
 
+// next.config.js
+/** @type {import('next').NextConfig} */
+const nextConfig = {
+  reactStrictMode: true,
+  images: {
+    domains: ['your-cloudflare-domain.com'],
+  },
+}
+
+module.exports = nextConfig
