--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "devsrus",
   "version": "1.0.0",
-  "description": "LinkedIn clone for developers",
-  "main": "backend/server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "start": "node server.js",
+    "build": "npm install && npm run client-build",
+    "client-build": "cd client && npm install && npm run build",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server.js",
+    "client": "cd client && npm start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^10.0.0",
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.12"
+  }
 }
